--- a/source/index.html
+++ b/source/index.html
@@ -18,101 +18,117 @@
 <body class="page__body">
   <div class="wrapper">
     <header class="header">
-      <nav class="main-navigation">
-        <a class="main-navigation__logo" href="index.html">
+      <div class="container">
+        <nav class="main-navigation">
+            <a class="main-navigation__logo reset-list" href="index.html">
 
-          <!-- picture для логотипа-картинки -->
-          <picture class="main-navigation__logo--image">
-            <!-- Для web версии -->
-            <source width="70" height="59" media="(min-width: 1110px)" type="image/svg+xml" srcset="../../images/icons/stack.svg#logo-web">
+              <!-- picture для логотипа-картинки -->
+              <picture class="main-navigation__logo-image">
+                <!-- Для web версии -->
+                <source width="70" height="59" media="(min-width: 1440px)" type="image/svg+xml"
+                  srcset="../../images/icons/stack.svg#logo-web">
 
-            <!-- Для tablet версии -->
-            <source width="60" height="50" media="(min-width: 700px)" type="image/svg+xml" srcset="../../images/icons/stack.svg#logo-tablet">
+                <!-- Для tablet версии -->
+                <source width="60" height="50" media="(min-width: 700px)" type="image/svg+xml"
+                  srcset="../../images/icons/stack.svg#logo-tablet">
 
-            <!-- Для mobile версии -->
-            <img src="../../images/icons/stack.svg#logo-mobile" width="33" height="38" alt="Логотип - ссылка на главную страницу">
-          </picture>
+                <!-- Для mobile версии -->
+                <img src="../../images/icons/stack.svg#logo-mobile" width="33" height="38"
+                  alt="Логотип - ссылка на главную страницу">
+              </picture>
 
-          <!-- picture для логотипа-текста -->
-          <picture>
-            <!-- Для tablet и web версии -->
-            <source width="118" height="21" media="(min-width: 1100px)" type="image/svg+xml" srcset="../../images/icons/stack.svg#logo-text-header-tablet">
-            <source width="101" height="18" media="(min-width: 700px)" type="image/svg+xml" srcset="../../images/icons/stack.svg#logo-text-header-tablet">
+              <!-- picture для логотипа-текста -->
+              <picture>
+                <!-- Для web версии -->
+                <source width="118" height="21" media="(min-width: 1440px)" type="image/svg+xml"
+                  srcset="../../images/icons/stack.svg#logo-text-header-tablet">
 
-            <!-- Для mobile версии -->
-            <img src="../../images/icons/stack.svg#logo-text-header-mobile" width="101" height="18" alt="Логотип - ссылка на главную страницу">
-          </picture>
-        </a>
-        <button class="main-navigation__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <ul class="main-navigation__list">
-          <li class="main-navigation__item">
-            <a class="main-navigation__link main-navigation__link--active" href="index.html">Главная</a>
-          </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="main-navigation__item">
-            <a class="main-navigation__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
+                <!-- Для tablet версии -->
+                <source width="101" height="18" media="(min-width: 768px)" type="image/svg+xml"
+                  srcset="../../images/icons/stack.svg#logo-text-header-tablet">
+
+                <!-- Для mobile версии -->
+                <img src="../../images/icons/stack.svg#logo-text-header-mobile" width="101" height="18"
+                  alt="Логотип - ссылка на главную страницу">
+              </picture>
+            </a>
+          <button class="main-navigation__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-navigation__list main-navigation__list--none">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--active main-navigation__link--desktop main-navigation__link--desktop-active" href="index.html">Главная</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--desktop" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link main-navigation__link--desktop" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main class="main">
 
       <section class="promo">
-        <div class="promo__title">
-          <h1>Функциональное питание для котов</h1>
-          <p>Занялся собой? Займись котом!</p>
-          <a class="buttons promo__button" href="form.html">Подобрать программу</a>
+        <div class="container">
+          <div class="promo__title">
+            <h1>Функциональное питание для котов</h1>
+            <p>Занялся собой? Займись котом!</p>
+            <a class="buttons promo__button" href="form.html">Подобрать программу</a>
+          </div>
+          <picture class="promo__image">
+            <source width="552" height="499" type="image/png" media="(min-width: 1440px)"
+              srcset="./images/index-can-web@1x.png 1x, ./images/index-can-web@2x.png 2x">
+            <source width="709" height="609" type="image/png" media="(min-width: 768px)"
+              srcset="./images/index-can-tablet@1x.png 1x, ./images/index-can-tablet@2x.png 2x">
+            <img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280"
+              height="270" alt="Банка корма">
+          </picture>
         </div>
-        <picture class="promo__image">
-          <source width="552" height="499" type="image/png" media="(min-width: 1100px)"
-            srcset="./images/index-can-web@1x.png 1x, ./images/index-can-web@2x.png 2x">
-          <source width="709" height="609" type="image/png" media="(min-width: 700px)"
-            srcset="./images/index-can-tablet@1x.png 1x, ./images/index-can-tablet@2x.png 2x">
-          <img src="./images/index-can-mobile@1x.png" srcset="./images/index-can-mobile@2x.png 2x" width="280"
-            height="270" alt="Банка корма">
-        </picture>
       </section>
 
       <!-- Список с описание вариантов линеек кормов -->
       <section class="types-of-product">
-        <ul class="types-of-product__list">
-          <li class="types-of-product__item types-of-product__item-slim-line">
-            <h3>Похудение</h3>
-            <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
-              Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a href="catalog.html">Каталог slim</a>
-          </li>
-          <li class="types-of-product__item types-of-product__item-pro-line">
-            <h3>Набор массы</h3>
-            <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему
-              коту нарастить необходимые мышцы!</p>
-            <a href="catalog.html">Каталог pro</a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="types-of-product__list">
+            <li class="types-of-product__item types-of-product__item-slim-line">
+              <h3>Похудение</h3>
+              <p>Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
+                Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a href="catalog.html">Каталог slim</a>
+            </li>
+            <li class="types-of-product__item types-of-product__item-pro-line">
+              <h3>Набор массы</h3>
+              <p>Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему
+                коту нарастить необходимые мышцы!</p>
+              <a href="catalog.html">Каталог pro</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Описание принципорв работы корма -->
       <section class="about-product">
-        <h2>Как это работает</h2>
-        <ol class="about-product__list">
-          <li class="about-product__item about-product__item-leaf">
-            <p>Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="about-product__item about-product__item-food">
-            <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="about-product__item about-product__item-eat">
-            <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="about-product__item about-product__item-watch">
-            <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-          </li>
-        </ol>
+        <div class="container">
+          <h2>Как это работает</h2>
+          <ol class="about-product__list">
+            <li class="about-product__item about-product__item--leaf">
+              <p>Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="about-product__item about-product__item--food">
+              <p>Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="about-product__item about-product__item--eat">
+              <p>Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="about-product__item about-product__item--watch">
+              <p>Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ol>
+        </div>
       </section>
 
       <!-- Описание примера работы корма -->
@@ -135,75 +151,99 @@
           </div>
         </div>
 
+
+        <div class="slider">
+          <div class="before">
+            <picture>
+              <source type="image/png" media="(min-width: 768px)"
+                srcset="./images/cat-before-tablet-web@1x.png 1x, ./images/cat-before-tablet-web@2x.png 2x">
+              <img src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280" height="256"
+                alt="Толстенький котик">
+            </picture>
+          </div>
+          <div class="after">
+            <picture>
+              <source type="image/png" media="(min-width: 768px)"
+                srcset="./images/cat-after-tablet-web@1x.png 1x, ./images/cat-after-tablet-web@2x.png 2x">
+              <img src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280" height="256"
+                alt="Нормальный котик">
+            </picture>
+          </div>
+          <div class="change"></div>
+        </div>
+        <!--
         <div class="result-slider">
-          <!-- Состояние слайдера before -->
+           Состояние слайдера before
           <picture>
-            <source type="image/png" media="(min-width: 800px)"
+            <source type="image/png" media="(min-width: 768px)"
               srcset="./images/cat-before-tablet-web@1x.png 1x, ./images/cat-before-tablet-web@2x.png 2x">
             <img src="./images/cat-before-mobile@1x.png" srcset="./images/cat-before-mobile@2x.png 2x" width="280"
               height="256" alt="Толстенький котик">
           </picture>
-          <!-- Состояние слайдера after -->
+          Состояние слайдера after
           <picture>
-            <source type="image/png" media="(min-width: 800px)"
+            <source type="image/png" media="(min-width: 768px)"
               srcset="./images/cat-after-tablet-web@1x.png 1x, ./images/cat-after-tablet-web@2x.png 2x">
             <img src="./images/cat-after-mobile@1x.png" srcset="./images/cat-after-mobile@2x.png 2x" width="280"
               height="256" alt="Нормальный котик">
           </picture>
-        </div>
+        </div>-->
       </section>
 
       <!-- Адрес и карта -->
       <section class="address">
-        <div class="address-title">
+        <div class="address__title">
           <h2>Приглашаем к сотрудничеству дилеров!</h2>
-          <address class="address-title__address">
-            <p>ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <address class="address__title-address">
+            <p>ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
           </address>
         </div>
         <div class="address-map">
-		<iframe
-			src="https://yandex.ru/map-widget/v1/?um=constructor%3A7f10bc86ac305a1649f1aae136eee74d3b20e6a6c37d70f0af84cc7327e27552&amp;source=constructor"
-			width="500" height="400" frameborder="0"></iframe>
+          <iframe
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A7f10bc86ac305a1649f1aae136eee74d3b20e6a6c37d70f0af84cc7327e27552&amp;source=constructor"
+             height="362px" width="100%" frameborder="0"></iframe>
         </div>
       </section>
 
     </main>
 
     <footer class="footer">
-      <a class="footer__logo footer__decor-line" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип"></a>
+      <div class="footer__content">
+        <a class="footer__logo footer__decor-line" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Логотип"></a>
 
-      <!-- Ссылки на социальные страницы -->
-      <ul class="social-media">
-        <li class="social-media__item">
-          <a class="social-media__link social-media__link-vk" href="https://vk.com/htmlacademy" aria-label="В контакте"></a>
-        </li>
-        <li class="social-media__item">
-          <a class="social-media__link social-media__link-youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube"></a>
-        </li>
-        <li class="social-media__item">
-          <a class="social-media__link social-media__link-telegramm" href="https://t.me/htmlacademy" aria-label="Telegramm"></a>
-        </li>
-      </ul>
+        <!-- Ссылки на социальные страницы -->
+        <ul class="social-media">
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link-vk" href="https://vk.com/htmlacademy" aria-label="В контакте"></a>
+          </li>
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link-youtube" href="https://www.youtube.com/user/htmlacademyru" aria-label="Youtube"></a>
+          </li>
+          <li class="social-media__item">
+            <a class="social-media__link social-media__link-telegramm" href="https://t.me/htmlacademy" aria-label="Telegramm"></a>
+          </li>
+        </ul>
 
-      <!-- Комбинированная ссылка из наименования и логотипа -->
-      <a class="html-academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Html Academy">
-        <p>HTML Academy</p>
-        <svg class="html-academy__icon" xmlns="http://www.w3.org/2000/svg" width="27" height="35" viewBox="0 0 27 35" fill="none">
-          <g clip-path="url(#clip0_99067_120)">
-            <path
-              d="M13.6426 0.515754L13.5 0.5L0 1.90733V26.5129L13.5 34.5L27 26.5129V1.90733L13.6426 0.515754ZM25.2344 25.5151L13.5 32.4573L1.76561 25.5151V15.4293L13.4507 22.3451L13.4701 23.5984L5.45351 18.8548L5.44295 20.0801L13.4894 24.8885L13.5088 26.175L5.46408 21.4174L5.45351 22.6427L13.5 27.4511L21.6239 22.6182V21.3929V17.409L25.2432 15.2595L25.2344 25.5151ZM25.2344 13.9519L22.0147 15.8319L20.5325 16.7071L13.4666 12.5201L13.456 13.7454L19.4957 17.318L19.4429 17.3495L19.3126 17.4247L18.4536 17.9166L13.4666 14.9689L13.456 16.1942L17.3921 18.5222L16.4591 19.1314L16.438 19.1436L13.4666 17.402L13.456 18.6273L15.4029 19.7615L13.4155 20.9483L1.7973 14.0762L13.4349 7.11831L25.2344 13.9519ZM25.2344 12.7266L13.4401 5.81075L1.76561 12.7196V3.4897L13.5 2.26442L25.2344 3.4897V12.7266Z"
-              fill="currentColor" />
-          </g>
-          <defs>
-            <clippath>
-              <rect width="27" height="34" fill="white" transform="translate(0 0.5)" />
-            </clippath>
-          </defs>
-        </svg>
-      </a>
+        <!-- Комбинированная ссылка из наименования и логотипа -->
+        <a class="html-academy" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Html Academy">
+          <p>HTML Academy</p>
+          <svg class="html-academy__icon" xmlns="http://www.w3.org/2000/svg" width="27" height="35" viewBox="0 0 27 35" fill="none">
+            <g clip-path="url(#clip0_99067_120)">
+              <path
+                d="M13.6426 0.515754L13.5 0.5L0 1.90733V26.5129L13.5 34.5L27 26.5129V1.90733L13.6426 0.515754ZM25.2344 25.5151L13.5 32.4573L1.76561 25.5151V15.4293L13.4507 22.3451L13.4701 23.5984L5.45351 18.8548L5.44295 20.0801L13.4894 24.8885L13.5088 26.175L5.46408 21.4174L5.45351 22.6427L13.5 27.4511L21.6239 22.6182V21.3929V17.409L25.2432 15.2595L25.2344 25.5151ZM25.2344 13.9519L22.0147 15.8319L20.5325 16.7071L13.4666 12.5201L13.456 13.7454L19.4957 17.318L19.4429 17.3495L19.3126 17.4247L18.4536 17.9166L13.4666 14.9689L13.456 16.1942L17.3921 18.5222L16.4591 19.1314L16.438 19.1436L13.4666 17.402L13.456 18.6273L15.4029 19.7615L13.4155 20.9483L1.7973 14.0762L13.4349 7.11831L25.2344 13.9519ZM25.2344 12.7266L13.4401 5.81075L1.76561 12.7196V3.4897L13.5 2.26442L25.2344 3.4897V12.7266Z"
+                fill="currentColor" />
+            </g>
+            <defs>
+              <clippath>
+                <rect width="27" height="34" fill="white" transform="translate(0 0.5)" />
+              </clippath>
+            </defs>
+          </svg>
+        </a>
+      </div>
     </footer>
   </div>
+  <script src="scripts/slider.js"></script>
 </body>
 
 </html>
